Prevent content from overflowing on mobiles devices

--- a/src/components/feature/feature.module.css
+++ b/src/components/feature/feature.module.css
@@ -160,9 +160,8 @@
   }
 }
 
-.imageWrapper {
+.imageWrapper img {
   border-radius: 50%;
-  overflow: hidden;
 }
 
 @media (max-width: 1000px) {
