--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,7 +5,3 @@ Use a percentage so that user set font size is respected
 html {
   font-size: 62.5%;
 }
-
-body {
-  overflow-x: hidden;
-}
